@@ -29,13 +29,15 @@ if (Sys.getenv("Run_RPushbullet_Tests")=="yes") {
     str(pbGetDevices())
 
     ## Post a note item
-    res <- fromJSON(pbPost("note", "A Simple Test", "We think this should work.\nWe really do.")[[1]])
+    res <- fromJSON(pbPost("note", "A Simple Test",
+                           "We think this should work.\nWe really do.")[[1]])
     str(res)
-    # res$receiver_email # storing this test result to allow us to use active user's email for testing below.
+    ## storing this test result to allow us to use active user's email for testing below. 
 
 
     ## Post an address -- should open browser in Google Maps
-    str(fromJSON(pbPost(type="address", title="An Address", body="South Pole, Antarctica")[[1]]))
+    str(fromJSON(pbPost(type="address", title="An Address",
+                        body="South Pole, Antarctica")[[1]]))
 
     ## Post a URL -- should open browser
     str(fromJSON(pbPost(type="link", title="Some title", body="Some URL",
@@ -43,25 +45,26 @@ if (Sys.getenv("Run_RPushbullet_Tests")=="yes") {
 
     #### Posting Files with different arguments ####
 
+    ## we use this file several times below
+    descfile <- system.file("DESCRIPTION", package="RPushbullet")
+    
     ## Post a file with no recipients
-    str(fromJSON(pbPost(type="file", url=system.file("DESCRIPTION", package="RPushbullet"))[[1]]))
+    str(fromJSON(pbPost(type="file", url=descfile)[[1]]))
 
     ## Post a file with numeric recipient
-    str(fromJSON(pbPost(type="file", url=system.file("DESCRIPTION", package="RPushbullet"),
-                        recipients = 1)[[1]]))
+    str(fromJSON(pbPost(type="file", url=descfile, recipients = 1)[[1]]))
 
     ## Post a file with device name of recipient specified
-    str(fromJSON(pbPost(type="file", url=system.file("DESCRIPTION", package="RPushbullet"),
+    str(fromJSON(pbPost(type="file", url=descfile,
                         recipients = RPushbullet:::.getNames()[1])[[1]]))
 
     ## Post a file with an email recipient specified:
     pbPost()
 
-    str(fromJSON(pbPost(type="file", url=system.file("DESCRIPTION", package="RPushbullet"),
-                        email = res$receiver_email)[[1]]))
+    str(fromJSON(pbPost(type="file", url=descfile, email = res$receiver_email)[[1]]))
 
     ## Post file with both email and numeric recipient specified:
-    str(fromJSON(pbPost(type="file", url=system.file("DESCRIPTION", package="RPushbullet"),
-                        recipients = RPushbullet:::.getNames()[1], email = res$receiver_email)[[1]]))
+    str(fromJSON(pbPost(type="file", url=descfile, recipients = RPushbullet:::.getNames()[1],
+                        email = res$receiver_email)[[1]]))
 
 }
