@@ -1,3 +1,7 @@
+2014-12-30  Dirk Eddelbuettel  <edd@debian.org>
+
+	* tests/simpleTests.R: A few minor edits
+
 2014-12-29  Mike Birdgeneau  <mike.birdgeneau@gmail.com>
 
 	* R/pushes.R: Corrections to file transder mode
